--- a/doc/agile/v1/sprint_backlog_09.org
+++ b/doc/agile/v1/sprint_backlog_09.org
@@ -17,14 +17,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2018-10-12 Fri 15:41]
+#+CAPTION: Clock summary at [2018-10-13 Sat 16:53]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *59:01* |       |       |   0.0 |
+| *Total time*                                                                | *61:41* |       |       |   0.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 59:01   |       |       |   0.0 |
-| Active                                                                      |         | 59:01 |       |   0.0 |
+| Stories                                                                     | 61:41   |       |       |   0.0 |
+| Active                                                                      |         | 61:41 |       |   0.0 |
 | Edit release notes for previous sprint                                      |         |       |  1:30 |   0.0 |
 | Sprint and product backlog grooming                                         |         |       |  2:42 |   0.0 |
 | Update readme to reflect org move                                           |         |       |  1:58 |   0.0 |
@@ -39,6 +39,7 @@
 | Add vcpkg support to windows builds                                         |         |       |  9:16 |   0.0 |
 | Recap of the current situation                                              |         |       |  1:25 |   0.0 |
 | High-level model thoughts                                                   |         |       |  2:20 |   0.0 |
+| Resurrect CDash agents                                                      |         |       |  2:40 |   0.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -465,6 +466,25 @@ Notes:
 
 Jot down ideas on the separation between the API and the
 implementation in dogen products.
+
+*** STARTED Resurrect CDash agents                                    :story:
+    :LOGBOOK:
+    CLOCK: [2018-10-13 Sat 14:44]--[2018-10-13 Sat 16:53] =>  2:09
+    CLOCK: [2018-10-12 Fri 21:46]--[2018-10-12 Fri 22:17] =>  0:31
+    :END:
+
+CDash has bitrotted and is no longer working.
+
+- we need to get the build green on the Windows agent again.
+- we need to get the linux agent up and running again.
+
+Actually, the right thing to do is to connect CDash to travis like
+this project:
+
+- https://github.com/ned14/boost.outcome
+
+We can still have our own agents for the nightlies etc but at least
+this way all travis builds are pushing into CDash.
 
 *** Finish adding support for clang-cl builds                         :story:
 
