--- a/doc/agile/v1/sprint_backlog_09.org
+++ b/doc/agile/v1/sprint_backlog_09.org
@@ -17,14 +17,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2018-10-13 Sat 17:40]
+#+CAPTION: Clock summary at [2018-10-13 Sat 18:01]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *62:27* |       |       |   0.0 |
+| *Total time*                                                                | *62:47* |       |       |   0.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 62:27   |       |       |   0.0 |
-| Active                                                                      |         | 62:27 |       |   0.0 |
+| Stories                                                                     | 62:47   |       |       |   0.0 |
+| Active                                                                      |         | 62:47 |       |   0.0 |
 | Edit release notes for previous sprint                                      |         |       |  1:30 |   0.0 |
 | Sprint and product backlog grooming                                         |         |       |  2:42 |   0.0 |
 | Update readme to reflect org move                                           |         |       |  1:58 |   0.0 |
@@ -37,6 +37,7 @@
 | Investigate adding package management support to dogen                      |         |       | 11:10 |   0.0 |
 | Add vcpkg support to Linux builds                                           |         |       | 13:15 |   0.0 |
 | Add vcpkg support to windows builds                                         |         |       |  9:16 |   0.0 |
+| Add vcpkg support to osx builds                                             |         |       |  0:20 |   0.0 |
 | Recap of the current situation                                              |         |       |  1:25 |   0.0 |
 | High-level model thoughts                                                   |         |       |  2:20 |   0.0 |
 | Resurrect CDash agents                                                      |         |       |  3:26 |   0.0 |
@@ -415,6 +416,9 @@ studio and all the tools to latest in preparation to switching to
 C++ 17. Also try to add support for =clang-cl= if its easy.
 
 *** STARTED Add vcpkg support to osx builds                           :story:
+    :LOGBOOK:
+    CLOCK: [2018-10-13 Sat 17:41]--[2018-10-13 Sat 18:01] =>  0:20
+    :END:
 
 Following on from our investigation, we need to add vcpkg to the
 travis osx builds (clang). While we're there, update all the tools to
