--- a/doc/agile/v1/sprint_backlog_09.org
+++ b/doc/agile/v1/sprint_backlog_09.org
@@ -17,14 +17,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2018-10-13 Sat 18:01]
+#+CAPTION: Clock summary at [2018-10-13 Sat 19:44]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *62:47* |       |       |   0.0 |
+| *Total time*                                                                | *63:55* |       |       |   0.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 62:47   |       |       |   0.0 |
-| Active                                                                      |         | 62:47 |       |   0.0 |
+| Stories                                                                     | 63:55   |       |       |   0.0 |
+| Active                                                                      |         | 63:55 |       |   0.0 |
 | Edit release notes for previous sprint                                      |         |       |  1:30 |   0.0 |
 | Sprint and product backlog grooming                                         |         |       |  2:42 |   0.0 |
 | Update readme to reflect org move                                           |         |       |  1:58 |   0.0 |
@@ -37,10 +37,10 @@
 | Investigate adding package management support to dogen                      |         |       | 11:10 |   0.0 |
 | Add vcpkg support to Linux builds                                           |         |       | 13:15 |   0.0 |
 | Add vcpkg support to windows builds                                         |         |       |  9:16 |   0.0 |
-| Add vcpkg support to osx builds                                             |         |       |  0:20 |   0.0 |
+| Add vcpkg support to osx builds                                             |         |       |  1:13 |   0.0 |
 | Recap of the current situation                                              |         |       |  1:25 |   0.0 |
 | High-level model thoughts                                                   |         |       |  2:20 |   0.0 |
-| Resurrect CDash agents                                                      |         |       |  3:26 |   0.0 |
+| Resurrect CDash agents                                                      |         |       |  3:41 |   0.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -417,6 +417,7 @@ C++ 17. Also try to add support for =clang-cl= if its easy.
 
 *** STARTED Add vcpkg support to osx builds                           :story:
     :LOGBOOK:
+    CLOCK: [2018-10-13 Sat 18:35]--[2018-10-13 Sat 19:28] =>  0:53
     CLOCK: [2018-10-13 Sat 17:41]--[2018-10-13 Sat 18:01] =>  0:20
     :END:
 
@@ -473,6 +474,7 @@ implementation in dogen products.
 
 *** STARTED Resurrect CDash agents                                    :story:
     :LOGBOOK:
+    CLOCK: [2018-10-13 Sat 19:28]--[2018-10-13 Sat 19:43] =>  0:15
     CLOCK: [2018-10-13 Sat 16:54]--[2018-10-13 Sat 17:40] =>  0:46
     CLOCK: [2018-10-13 Sat 14:44]--[2018-10-13 Sat 16:53] =>  2:09
     CLOCK: [2018-10-12 Fri 21:46]--[2018-10-12 Fri 22:17] =>  0:31
