--- a/doc/agile/v1/sprint_backlog_09.org
+++ b/doc/agile/v1/sprint_backlog_09.org
@@ -17,14 +17,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2018-10-13 Sat 22:29]
+#+CAPTION: Clock summary at [2018-10-13 Sat 22:46]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *65:19* |       |       |   0.0 |
+| *Total time*                                                                | *65:35* |       |       |   0.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 65:19   |       |       |   0.0 |
-| Active                                                                      |         | 65:19 |       |   0.0 |
+| Stories                                                                     | 65:35   |       |       |   0.0 |
+| Active                                                                      |         | 65:35 |       |   0.0 |
 | Edit release notes for previous sprint                                      |         |       |  1:30 |   0.0 |
 | Sprint and product backlog grooming                                         |         |       |  2:42 |   0.0 |
 | Update readme to reflect org move                                           |         |       |  1:58 |   0.0 |
@@ -40,7 +40,7 @@
 | Add vcpkg support to osx builds                                             |         |       |  1:13 |   0.0 |
 | Recap of the current situation                                              |         |       |  1:25 |   0.0 |
 | High-level model thoughts                                                   |         |       |  2:20 |   0.0 |
-| Resurrect CDash agents                                                      |         |       |  5:05 |   0.0 |
+| Resurrect CDash agents                                                      |         |       |  5:21 |   0.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -474,6 +474,7 @@ implementation in dogen products.
 
 *** STARTED Resurrect CDash agents                                    :story:
     :LOGBOOK:
+    CLOCK: [2018-10-13 Sat 22:30]--[2018-10-13 Sat 22:46] =>  0:16
     CLOCK: [2018-10-13 Sat 22:20]--[2018-10-13 Sat 22:29] =>  0:09
     CLOCK: [2018-10-13 Sat 22:05]--[2018-10-13 Sat 22:19] =>  0:14
     CLOCK: [2018-10-13 Sat 21:54]--[2018-10-13 Sat 22:04] =>  0:10
