--- a/doc/agile/v1/sprint_backlog_09.org
+++ b/doc/agile/v1/sprint_backlog_09.org
@@ -17,14 +17,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2018-10-13 Sat 23:12]
+#+CAPTION: Clock summary at [2018-10-13 Sat 23:50]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *65:59* |       |       |   0.0 |
+| *Total time*                                                                | *66:37* |       |       |   0.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 65:59   |       |       |   0.0 |
-| Active                                                                      |         | 65:59 |       |   0.0 |
+| Stories                                                                     | 66:37   |       |       |   0.0 |
+| Active                                                                      |         | 66:37 |       |   0.0 |
 | Edit release notes for previous sprint                                      |         |       |  1:30 |   0.0 |
 | Sprint and product backlog grooming                                         |         |       |  2:42 |   0.0 |
 | Update readme to reflect org move                                           |         |       |  1:58 |   0.0 |
@@ -37,10 +37,10 @@
 | Investigate adding package management support to dogen                      |         |       | 11:10 |   0.0 |
 | Add vcpkg support to Linux builds                                           |         |       | 13:15 |   0.0 |
 | Add vcpkg support to windows builds                                         |         |       |  9:16 |   0.0 |
+| Resurrect CDash agents                                                      |         |       |  6:23 |   0.0 |
 | Add vcpkg support to osx builds                                             |         |       |  1:13 |   0.0 |
 | Recap of the current situation                                              |         |       |  1:25 |   0.0 |
 | High-level model thoughts                                                   |         |       |  2:20 |   0.0 |
-| Resurrect CDash agents                                                      |         |       |  5:45 |   0.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -415,6 +415,51 @@ appveyor windows builds (msvc). While we're there, update visual
 studio and all the tools to latest in preparation to switching to
 C++ 17. Also try to add support for =clang-cl= if its easy.
 
+*** COMPLETED Resurrect CDash agents                                  :story:
+    CLOSED: [2018-10-13 Sat 23:50]
+    :LOGBOOK:
+    CLOCK: [2018-10-13 Sat 23:12]--[2018-10-13 Sat 23:50] =>  0:38
+    CLOCK: [2018-10-13 Sat 22:47]--[2018-10-13 Sat 23:11] =>  0:24
+    CLOCK: [2018-10-13 Sat 22:30]--[2018-10-13 Sat 22:46] =>  0:16
+    CLOCK: [2018-10-13 Sat 22:20]--[2018-10-13 Sat 22:29] =>  0:09
+    CLOCK: [2018-10-13 Sat 22:05]--[2018-10-13 Sat 22:19] =>  0:14
+    CLOCK: [2018-10-13 Sat 21:54]--[2018-10-13 Sat 22:04] =>  0:10
+    CLOCK: [2018-10-13 Sat 21:40]--[2018-10-13 Sat 21:53] =>  0:13
+    CLOCK: [2018-10-13 Sat 20:41]--[2018-10-13 Sat 21:09] =>  0:28
+    CLOCK: [2018-10-13 Sat 20:30]--[2018-10-13 Sat 20:40] =>  0:10
+    CLOCK: [2018-10-13 Sat 19:28]--[2018-10-13 Sat 19:43] =>  0:15
+    CLOCK: [2018-10-13 Sat 16:54]--[2018-10-13 Sat 17:40] =>  0:46
+    CLOCK: [2018-10-13 Sat 14:44]--[2018-10-13 Sat 16:53] =>  2:09
+    CLOCK: [2018-10-12 Fri 21:46]--[2018-10-12 Fri 22:17] =>  0:31
+    :END:
+
+CDash has bitrotted and is no longer working.
+
+- we need to get the build green on the Windows agent again.
+- we need to get the linux agent up and running again.
+
+Actually, the right thing to do is to connect CDash to travis like
+this project:
+
+- https://github.com/ned14/boost.outcome
+
+We can still have our own agents for the nightlies etc but at least
+this way all travis builds are pushing into CDash.
+
+Command line:
+
+: CMAKE_TOOLCHAIN_FILE=~/Development/DomainDrivenConsulting/masd/vcpkg/master/scripts/buildsystems/vcpkg.cmake ctest --extra-verbose --script ".ctest.cmake,configuration_type=Release,generator=Ninja,compiler=clang6,number_of_jobs=3"
+
+Links:
+
+- https://github.com/ned14/outcome/blob/develop/.ci.cmake
+- https://my.cdash.org/index.php?project=Boost.Outcome&date=2018-10-12
+- https://public.kitware.com/pipermail/cdash/2010-June/000819.html
+- https://github.com/ned14/quickcpplib/blob/master/cmakelib/QuickCppLibUtils.cmake
+- [[https://gitlab.kitware.com/zackgalbreath/cmake/commit/2cf643d2cba4a819108e0e284cd58cf356378df3][Example of sub-projects]]
+- [[https://github.com/Kitware/CDash/issues/732][GitHub issue with CDash problems]]
+- [[http://webcache.googleusercontent.com/search?q=cache:vEhBG9OAeSAJ:https://blog.kitware.com/cdash-integration-with-github/&hl=en&gl=uk&strip=1&vwsrc=0][CDash integration with GitHub]]
+
 *** STARTED Add vcpkg support to osx builds                           :story:
     :LOGBOOK:
     CLOCK: [2018-10-13 Sat 18:35]--[2018-10-13 Sat 19:28] =>  0:53
@@ -471,49 +516,6 @@ Notes:
 
 Jot down ideas on the separation between the API and the
 implementation in dogen products.
-
-*** STARTED Resurrect CDash agents                                    :story:
-    :LOGBOOK:
-    CLOCK: [2018-10-13 Sat 22:47]--[2018-10-13 Sat 23:11] =>  0:24
-    CLOCK: [2018-10-13 Sat 22:30]--[2018-10-13 Sat 22:46] =>  0:16
-    CLOCK: [2018-10-13 Sat 22:20]--[2018-10-13 Sat 22:29] =>  0:09
-    CLOCK: [2018-10-13 Sat 22:05]--[2018-10-13 Sat 22:19] =>  0:14
-    CLOCK: [2018-10-13 Sat 21:54]--[2018-10-13 Sat 22:04] =>  0:10
-    CLOCK: [2018-10-13 Sat 21:40]--[2018-10-13 Sat 21:53] =>  0:13
-    CLOCK: [2018-10-13 Sat 20:41]--[2018-10-13 Sat 21:09] =>  0:28
-    CLOCK: [2018-10-13 Sat 20:30]--[2018-10-13 Sat 20:40] =>  0:10
-    CLOCK: [2018-10-13 Sat 19:28]--[2018-10-13 Sat 19:43] =>  0:15
-    CLOCK: [2018-10-13 Sat 16:54]--[2018-10-13 Sat 17:40] =>  0:46
-    CLOCK: [2018-10-13 Sat 14:44]--[2018-10-13 Sat 16:53] =>  2:09
-    CLOCK: [2018-10-12 Fri 21:46]--[2018-10-12 Fri 22:17] =>  0:31
-    :END:
-
-CDash has bitrotted and is no longer working.
-
-- we need to get the build green on the Windows agent again.
-- we need to get the linux agent up and running again.
-
-Actually, the right thing to do is to connect CDash to travis like
-this project:
-
-- https://github.com/ned14/boost.outcome
-
-We can still have our own agents for the nightlies etc but at least
-this way all travis builds are pushing into CDash.
-
-Command line:
-
-: CMAKE_TOOLCHAIN_FILE=~/Development/DomainDrivenConsulting/masd/vcpkg/master/scripts/buildsystems/vcpkg.cmake ctest --extra-verbose --script ".ctest.cmake,configuration_type=Release,generator=Ninja,compiler=clang6,number_of_jobs=3"
-
-Links:
-
-- https://github.com/ned14/outcome/blob/develop/.ci.cmake
-- https://my.cdash.org/index.php?project=Boost.Outcome&date=2018-10-12
-- https://public.kitware.com/pipermail/cdash/2010-June/000819.html
-- https://github.com/ned14/quickcpplib/blob/master/cmakelib/QuickCppLibUtils.cmake
-- [[https://gitlab.kitware.com/zackgalbreath/cmake/commit/2cf643d2cba4a819108e0e284cd58cf356378df3][Example of sub-projects]]
-- [[https://github.com/Kitware/CDash/issues/732][GitHub issue with CDash problems]]
-- [[http://webcache.googleusercontent.com/search?q=cache:vEhBG9OAeSAJ:https://blog.kitware.com/cdash-integration-with-github/&hl=en&gl=uk&strip=1&vwsrc=0][CDash integration with GitHub]]
 
 *** Finish adding support for clang-cl builds                         :story:
 
