--- a/doc/agile/v1/sprint_backlog_09.org
+++ b/doc/agile/v1/sprint_backlog_09.org
@@ -17,14 +17,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2018-10-14 Sun 21:13]
+#+CAPTION: Clock summary at [2018-10-14 Sun 22:50]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *67:38* |       |       |   0.0 |
+| *Total time*                                                                | *69:12* |       |       |   0.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 67:38   |       |       |   0.0 |
-| Active                                                                      |         | 67:38 |       |   0.0 |
+| Stories                                                                     | 69:12   |       |       |   0.0 |
+| Active                                                                      |         | 69:12 |       |   0.0 |
 | Edit release notes for previous sprint                                      |         |       |  1:30 |   0.0 |
 | Sprint and product backlog grooming                                         |         |       |  2:54 |   0.0 |
 | Update readme to reflect org move                                           |         |       |  1:58 |   0.0 |
@@ -37,10 +37,11 @@
 | Investigate adding package management support to dogen                      |         |       | 11:10 |   0.0 |
 | Add vcpkg support to Linux builds                                           |         |       | 13:15 |   0.0 |
 | Add vcpkg support to windows builds                                         |         |       |  9:16 |   0.0 |
-| Resurrect CDash agents                                                      |         |       |  7:12 |   0.0 |
+| Resurrect CDash agents                                                      |         |       |  8:11 |   0.0 |
 | Add vcpkg support to osx builds                                             |         |       |  1:13 |   0.0 |
 | Recap of the current situation                                              |         |       |  1:25 |   0.0 |
 | High-level model thoughts                                                   |         |       |  2:20 |   0.0 |
+| Add support for kcov                                                        |         |       |  0:35 |   0.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -418,6 +419,7 @@ C++ 17. Also try to add support for =clang-cl= if its easy.
 
 *** STARTED Resurrect CDash agents                                    :story:
     :LOGBOOK:
+    CLOCK: [2018-10-14 Sun 21:14]--[2018-10-14 Sun 22:13] =>  0:59
     CLOCK: [2018-10-14 Sun 21:01]--[2018-10-14 Sun 21:13] =>  0:12
     CLOCK: [2018-10-14 Sun 07:33]--[2018-10-14 Sun 07:46] =>  0:13
     CLOCK: [2018-10-14 Sun 07:08]--[2018-10-14 Sun 07:32] =>  0:24
@@ -553,6 +555,14 @@ Notes:
   another endpoint, and users probably don't really need something
   that just reads a model and returns the injector version.
 - the distribution channels are a function of the product API.
+
+*** STARTED Add support for kcov                                      :story:
+    :LOGBOOK:
+    CLOCK: [2018-10-14 Sun 22:38]--[2018-10-14 Sun 22:50] =>  0:12
+    CLOCK: [2018-10-14 Sun 22:14]--[2018-10-14 Sun 22:37] =>  0:23
+    :END:
+
+Try to see how hard it is to integrate kcov with the current build.
 
 *** Rename debian package                                             :story:
 
